# ml-paper-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  analyst_agent.py  orchestrator.py  rag_agent.py
api/: dependencies.py  main.py  routers.py
core/: logging.py  models.py  settings.py
infra/: database.py  llm_client.py  vector_store.py
scripts/: download_papers.py  ingest_papers.py  run_evaluation.py
static/: index.html
tests/: conftest.py  test_analyst_agent.py  test_analyst_tools.py  test_database.py  test_extract_section.py  test_integration.py  test_rag_agent.py  test_search_documents.py
tools/: __init__.py  base.py  compare_papers.py  extract_section.py  rank_papers.py  search_documents.py  summarize.py
